// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders AcUnit 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M22 11h-4.17l3.24-3.24-1.41-1.42L15 11h-2V9l4.66-4.66-1.42-1.41L13 6.17V2h-2v4.17L7.76 2.93 6.34 4.34 11 9v2H9L4.34 6.34 2.93 7.76 6.17 11H2v2h4.17l-3.24 3.24 1.41 1.42L9 13h2v2l-4.66 4.66 1.42 1.41L11 17.83V22h2v-4.17l3.24 3.24 1.42-1.41L13 15v-2h2l4.66 4.66 1.41-1.42L17.83 13H22z"
  />
</svg>
`;

exports[`renders AccessTime 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
  />
</svg>
`;

exports[`renders Accessible 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M 12 2 A 2 2 0 0 1 12 6 A 2 2 0 0 1 12 2 M19 13v-2c-1.54.02-3.09-.75-4.07-1.83l-1.29-1.43c-.17-.19-.38-.34-.61-.45-.01 0-.01-.01-.02-.01H13c-.35-.2-.75-.3-1.19-.26C10.76 7.11 10 8.04 10 9.09V15c0 1.1.9 2 2 2h5v5h2v-5.5c0-1.1-.9-2-2-2h-3v-3.45c1.29 1.07 3.25 1.94 5 1.95zm-6.17 5c-.41 1.16-1.52 2-2.83 2-1.66 0-3-1.34-3-3 0-1.31.84-2.41 2-2.83V12.1c-2.28.46-4 2.48-4 4.9 0 2.76 2.24 5 5 5 2.42 0 4.44-1.72 4.9-4h-2.07z"
  />
</svg>
`;

exports[`renders Add 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
  />
</svg>
`;

exports[`renders AddBox 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
  />
</svg>
`;

exports[`renders AddCircleOutline 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
  />
</svg>
`;

exports[`renders AirlineSeatReclineExtra 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M5.35 5.64c-.9-.64-1.12-1.88-.49-2.79.63-.9 1.88-1.12 2.79-.49.9.64 1.12 1.88.49 2.79-.64.9-1.88 1.12-2.79.49zM16 19H8.93c-1.48 0-2.74-1.08-2.96-2.54L4 7H2l1.99 9.76C4.37 19.2 6.47 21 8.94 21H16v-2zm.23-4h-4.88l-1.03-4.1c1.58.89 3.28 1.54 5.15 1.22V9.99c-1.63.31-3.44-.27-4.69-1.25L9.14 7.47c-.23-.18-.49-.3-.76-.38-.32-.09-.66-.12-.99-.06h-.02c-1.23.22-2.05 1.39-1.84 2.61l1.35 5.92C7.16 16.98 8.39 18 9.83 18h6.85l3.82 3 1.5-1.5-5.77-4.5z"
  />
</svg>
`;

exports[`renders AirlineSeatReclineNormal 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.59 5.41c-.78-.78-.78-2.05 0-2.83.78-.78 2.05-.78 2.83 0 .78.78.78 2.05 0 2.83-.79.79-2.05.79-2.83 0zM6 16V7H4v9c0 2.76 2.24 5 5 5h6v-2H9c-1.66 0-3-1.34-3-3zm14 4.07L14.93 15H11.5v-3.68c1.4 1.15 3.6 2.16 5.5 2.16v-2.16c-1.66.02-3.61-.87-4.67-2.04l-1.4-1.55c-.19-.21-.43-.38-.69-.5-.29-.14-.62-.23-.96-.23h-.03C8.01 7 7 8.01 7 9.25V15c0 1.66 1.34 3 3 3h5.07l3.5 3.5L20 20.07z"
  />
</svg>
`;

exports[`renders Airplane 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6.5681,4.6749 L12.8701,7.4349 L10.6421,9.7609 L5.8621,5.5369 C5.7281,5.4509 5.7081,5.2629 5.8201,5.1499 L6.2591,4.7109 C6.3411,4.6289 6.4691,4.6139 6.5681,4.6749 Z M16.9715,11.5216 L19.7315,17.8366 C19.7915,17.9356 19.7775,18.0636 19.6955,18.1456 L19.2555,18.5846 C19.1425,18.6976 18.9535,18.6776 18.8675,18.5426 L14.6375,13.7426 L16.9715,11.5216 Z M6.8387,15.2198 L4.1467,12.9578 C3.9867,12.8858 3.9497,12.6778 4.0727,12.5538 L4.6327,11.9948 C4.7147,11.9118 4.8437,11.8978 4.9427,11.9598 L8.0897,12.7808 L6.9307,15.0288 C6.9017,15.0848 6.8657,15.1498 6.8387,15.2198 Z M11.6326,16.3224 L12.5266,19.5054 C12.5506,19.5924 12.5266,19.6854 12.4626,19.7504 L11.8646,20.3464 C11.7416,20.4694 11.5336,20.4324 11.4606,20.2744 L9.1856,17.5674 L9.3556,17.4824 L11.6326,16.3224 Z M20.0594,4.2974 L20.1004,4.3414 L20.1174,4.3614 C20.3374,4.6344 20.3664,5.0004 20.3834,5.2254 C20.4574,6.4414 20.3084,7.2994 19.9134,7.9234 L19.8774,7.9824 C19.7934,8.1234 19.7384,8.2034 19.5504,8.3904 L12.0694,15.5174 L12.0164,15.5684 L11.9514,15.6014 L9.1344,17.0384 C8.7884,17.2264 7.8684,17.4804 7.3974,17.0084 C6.8874,16.4994 7.2054,15.5704 7.3694,15.2604 L8.8044,12.4534 L8.8374,12.3884 L8.8874,12.3364 L16.0124,4.8574 C16.3154,4.5354 16.6454,4.3774 16.9634,4.2514 C17.6004,4.0104 18.4104,3.9444 19.5294,4.0464 C19.7384,4.0724 19.9204,4.1594 20.0594,4.2974 Z M18.8875,11.8824 C18.9865,11.7834 19.1415,11.7834 19.2415,11.8824 L20.3015,12.9434 C20.4005,13.0424 20.4005,13.1974 20.3015,13.2964 L18.9155,14.6824 L18.0455,12.7234 L18.8875,11.8824 Z M11.1092,4.1041 C11.2082,4.0051 11.3642,4.0051 11.4632,4.1041 L12.5232,5.1651 C12.6222,5.2641 12.6222,5.4191 12.5232,5.5181 L11.6812,6.3591 L9.7232,5.4901 L11.1092,4.1041 Z"
  />
</svg>
`;

exports[`renders AirportShuttle 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17 5H3c-1.1 0-2 .89-2 2v9h2c0 1.65 1.34 3 3 3s3-1.35 3-3h5.5c0 1.65 1.34 3 3 3s3-1.35 3-3H23v-5l-6-6zM3 11V7h4v4H3zm3 6.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm7-6.5H9V7h4v4zm4.5 6.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM15 11V7h1l4 4h-5z"
  />
</svg>
`;

exports[`renders Apps 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"
  />
</svg>
`;

exports[`renders ArrowBack 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
  />
</svg>
`;

exports[`renders ArrowDownward 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
  />
</svg>
`;

exports[`renders ArrowForward 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
  />
</svg>
`;

exports[`renders ArrowUpward 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
  />
</svg>
`;

exports[`renders AttachMoney 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
  />
</svg>
`;

exports[`renders Automatic 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8 s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M14.3,15.3H16L12.9,8h-1.7L8,15.3h1.7l0.6-1.4h3.4L14.3,15.3z M10.8,12.6L12,9.7l1.2,2.8h-2.4 V12.6L10.8,12.6z"
  />
</svg>
`;

exports[`renders Bag 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,6.5h-3v-2c0-1.1-0.9-2-2-2H9c-1.1,0-2,0.9-2,2v2H4c-1.1,0-2,0.9-2,2v11c0,1.1,0.9,2,2,2h16 c1.1,0,2-0.9,2-2v-11C22,7.4,21.1,6.5,20,6.5z M9,4.5h6v2H9V4.5z M20,19.5H4v-2h16V19.5z M20,14.5H4v-6h3v2h2v-2h6v2h2v-2h3V14.5z"
  />
</svg>
`;

exports[`renders BeachAccess 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M13.127 14.56l1.43-1.43 6.44 6.443L19.57 21zm4.293-5.73l2.86-2.86c-3.95-3.95-10.35-3.96-14.3-.02 3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.94 3.95-3.93 10.35.02 14.3l2.86-2.86C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02l-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"
  />
</svg>
`;

exports[`renders Brightness5 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 15.31L23.31 12 20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
  />
</svg>
`;

exports[`renders Build 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
  />
</svg>
`;

exports[`renders Business 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"
  />
</svg>
`;

exports[`renders BusinessCenter 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10 16v-1H3.01L3 19c0 1.11.89 2 2 2h14c1.11 0 2-.89 2-2v-4h-7v1h-4zm10-9h-4.01V5l-2-2h-4l-2 2v2H4c-1.1 0-2 .9-2 2v3c0 1.11.89 2 2 2h6v-2h4v2h6c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2zm-6 0h-4V5h4v2z"
  />
</svg>
`;

exports[`renders Cached 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
  />
</svg>
`;

exports[`renders Cake 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 6c1.11 0 2-.9 2-2 0-.38-.1-.73-.29-1.03L12 0l-1.71 2.97c-.19.3-.29.65-.29 1.03 0 1.1.9 2 2 2zm4.6 9.99l-1.07-1.07-1.08 1.07c-1.3 1.3-3.58 1.31-4.89 0l-1.07-1.07-1.09 1.07C6.75 16.64 5.88 17 4.96 17c-.73 0-1.4-.23-1.96-.61V21c0 .55.45 1 1 1h16c.55 0 1-.45 1-1v-4.61c-.56.38-1.23.61-1.96.61-.92 0-1.79-.36-2.44-1.01zM18 9h-5V7h-2v2H6c-1.66 0-3 1.34-3 3v1.54c0 1.08.88 1.96 1.96 1.96.52 0 1.02-.2 1.38-.57l2.14-2.13 2.13 2.13c.74.74 2.03.74 2.77 0l2.14-2.13 2.13 2.13c.37.37.86.57 1.38.57 1.08 0 1.96-.88 1.96-1.96V12C21 10.34 19.66 9 18 9z"
  />
</svg>
`;

exports[`renders Call 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
  />
</svg>
`;

exports[`renders CarCircle 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z M16.2,7.6 C16.1,7.3,15.8,7,15.4,7H8.6C8.2,7,7.9,7.3,7.8,7.6l-1.3,3.7v5c0,0.3,0.3,0.6,0.6,0.6h0.6c0.3,0,0.6-0.3,0.6-0.6v-0.6h7.3v0.6 c0,0.3,0.3,0.6,0.6,0.6h0.6c0.3,0,0.6-0.3,0.6-0.6v-5L16.2,7.6z M8.6,13.9c-0.5,0-0.9-0.4-0.9-0.9S8.1,12,8.6,12s0.9,0.4,0.9,0.9 S9.1,13.9,8.6,13.9z M15.4,13.9c-0.5,0-0.9-0.4-0.9-0.9s0.4-0.9,0.9-0.9s0.9,0.4,0.9,0.9S15.9,13.9,15.4,13.9z M7.7,10.8l0.9-2.8 h6.7l0.9,2.8H7.7z"
  />
</svg>
`;

exports[`renders CarDoor 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18,2h-6.9l0,0c-0.7,0-1.3,0.3-1.7,0.9l-5,7.6l0,0C4.1,10.8,4,11.2,4,11.6V20c0,1.1,0.9,2,2,2 h12c1.1,0,2-0.9,2-2V4C20,2.9,19.1,2,18,2z M18,11H6.7l4.7-7H18V11z"
  />
</svg>
`;

exports[`renders Casino 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM7.5 18c-.83 0-1.5-.67-1.5-1.5S6.67 15 7.5 15s1.5.67 1.5 1.5S8.33 18 7.5 18zm0-9C6.67 9 6 8.33 6 7.5S6.67 6 7.5 6 9 6.67 9 7.5 8.33 9 7.5 9zm4.5 4.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm4.5 4.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm0-9c-.83 0-1.5-.67-1.5-1.5S15.67 6 16.5 6s1.5.67 1.5 1.5S17.33 9 16.5 9z"
  />
</svg>
`;

exports[`renders Chat 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 9h12v2H6V9zm8 5H6v-2h8v2zm4-6H6V6h12v2z"
  />
</svg>
`;

exports[`renders Check 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
  />
</svg>
`;

exports[`renders CheckBox 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`renders CheckBoxOutlineBlank 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
  />
</svg>
`;

exports[`renders CheckCircle 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`renders ChevronLeft 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
  />
</svg>
`;

exports[`renders ChevronRight 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
  />
</svg>
`;

exports[`renders ChildFriendly 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M13 2v8h8c0-4.42-3.58-8-8-8zm6.32 13.89C20.37 14.54 21 12.84 21 11H6.44l-.95-2H2v2h2.22s1.89 4.07 2.12 4.42c-1.1.59-1.84 1.75-1.84 3.08C4.5 20.43 6.07 22 8 22c1.76 0 3.22-1.3 3.46-3h2.08c.24 1.7 1.7 3 3.46 3 1.93 0 3.5-1.57 3.5-3.5 0-1.04-.46-1.97-1.18-2.61zM8 20c-.83 0-1.5-.67-1.5-1.5S7.17 17 8 17s1.5.67 1.5 1.5S8.83 20 8 20zm9 0c-.83 0-1.5-.67-1.5-1.5S16.17 17 17 17s1.5.67 1.5 1.5S17.83 20 17 20z"
  />
</svg>
`;

exports[`renders Close 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
</svg>
`;

exports[`renders CloudQueue 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM19 18H6c-2.21 0-4-1.79-4-4s1.79-4 4-4h.71C7.37 7.69 9.48 6 12 6c3.04 0 5.5 2.46 5.5 5.5v.5H19c1.66 0 3 1.34 3 3s-1.34 3-3 3z"
  />
</svg>
`;

exports[`renders CollisionCoverage 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,1l9,4v6c0,5.5-3.8,10.7-9,12c-5.2-1.3-9-6.5-9-12V5L12,1z M16.2,7.6C16.1,7.3,15.8,7,15.4,7 H8.6C8.2,7,7.9,7.3,7.8,7.6l-1.3,3.7v5c0,0.3,0.3,0.6,0.6,0.6h0.6c0.3,0,0.6-0.3,0.6-0.6v-0.6h7.3v0.6c0,0.3,0.3,0.6,0.6,0.6h0.6 c0.3,0,0.6-0.3,0.6-0.6v-5L16.2,7.6z M8.6,13.9c-0.5,0-0.9-0.4-0.9-0.9S8.1,12,8.6,12s0.9,0.4,0.9,0.9S9.1,13.9,8.6,13.9z M15.4,13.9c-0.5,0-0.9-0.4-0.9-0.9s0.4-0.9,0.9-0.9s0.9,0.4,0.9,0.9S15.9,13.9,15.4,13.9z M7.7,10.8l0.9-2.8h6.7l0.9,2.8H7.7z"
  />
</svg>
`;

exports[`renders Coupon 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21.4,11.6l-9-9C12.1,2.2,11.6,2,11,2H4C2.9,2,2,2.9,2,4v7c0,0.6,0.2,1.1,0.6,1.4l9,9 C12,21.8,12.5,22,13,22s1.1-0.2,1.4-0.6l7-7C21.8,14,22,13.5,22,13S21.8,11.9,21.4,11.6z M5.5,7C4.7,7,4,6.3,4,5.5S4.7,4,5.5,4 S7,4.7,7,5.5S6.3,7,5.5,7z"
  />
</svg>
`;

exports[`renders Create 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
  />
</svg>
`;

exports[`renders CreditCard 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 4H4c-1.11 0-1.99.89-1.99 2L2 18c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V6c0-1.11-.89-2-2-2zm0 14H4v-6h16v6zm0-10H4V6h16v2z"
  />
</svg>
`;

exports[`renders Cruises 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19.2,20.2c-1.3,0-2.5-0.5-3.6-1.2c-2.2,1.5-5,1.5-7.2,0c-1.1,0.7-2.3,1.2-3.6,1.2H3V22h1.8 c1.3,0,2.4-0.4,3.6-0.9c2.2,1.2,5,1.2,7.2,0c1.2,0.5,2.3,0.9,3.6,0.9H21v-1.8H19.2z M4.8,18.4L4.8,18.4c1.4,0,2.7-0.8,3.6-1.8 c0.9,1,2.2,1.8,3.6,1.8s2.7-0.8,3.6-1.8c0.9,1,2.2,1.8,3.6,1.8l0,0l1.7-6.1c0.1-0.3,0.1-0.5-0.1-0.7c-0.1-0.2-0.3-0.4-0.5-0.5 l-1.1-0.4V6.5c0-1-0.8-1.8-1.8-1.8h-2.7V2H9.3v2.7H6.6c-1,0-1.8,0.8-1.8,1.8v4.2l-1.2,0.4c-0.3,0.1-0.5,0.3-0.5,0.5 C3,11.7,3,12.1,3,12.3L4.8,18.4z M6.6,6.5h10.8v3.6L12,8.4l-5.4,1.8V6.5z"
  />
</svg>
`;

exports[`renders DateRange 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
  />
</svg>
`;

exports[`renders Description 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
  />
</svg>
`;

exports[`renders Devices 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M4 6h18V4H4c-1.1 0-2 .9-2 2v11H0v3h14v-3H4V6zm19 2h-6c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-1 9h-4v-7h4v7z"
  />
</svg>
`;

exports[`renders Directions 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21.71 11.29l-9-9c-.39-.39-1.02-.39-1.41 0l-9 9c-.39.39-.39 1.02 0 1.41l9 9c.39.39 1.02.39 1.41 0l9-9c.39-.38.39-1.01 0-1.41zM14 14.5V12h-4v3H8v-4c0-.55.45-1 1-1h5V7.5l3.5 3.5-3.5 3.5z"
  />
</svg>
`;

exports[`renders DirectionsCar 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18.92 6.01C18.72 5.42 18.16 5 17.5 5h-11c-.66 0-1.21.42-1.42 1.01L3 12v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.5 16c-.83 0-1.5-.67-1.5-1.5S5.67 13 6.5 13s1.5.67 1.5 1.5S7.33 16 6.5 16zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM5 11l1.5-4.5h11L19 11H5z"
  />
</svg>
`;

exports[`renders Discount 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M23,12l-2.4,2.7l0.3,3.5L17.3,19l-1.9,3L12,20.6L8.6,22l-1.9-3l-3.6-0.8l0.3-3.5L1,12l2.4-2.7 L3.1,5.8L6.7,5l1.9-3L12,3.4L15.4,2l1.9,3l3.6,0.8l-0.3,3.5L23,12z M12.2,11.4c-1.3-0.3-1.8-0.7-1.8-1.3c0-0.6,0.6-1.1,1.6-1.1 c1,0,1.4,0.5,1.5,1.2h1.3c0-1-0.7-1.9-1.9-2.2V6.7h-1.8V8C10,8.2,9.1,9,9.1,10.1c0,1.3,1.1,2,2.8,2.4c1.5,0.4,1.8,0.9,1.8,1.4 c0,0.4-0.3,1-1.6,1c-1.2,0-1.7-0.5-1.8-1.2H9c0.1,1.3,1,2,2.2,2.2v1.3h1.8V16c1.1-0.2,2.1-0.9,2.1-2.1C15,12.3,13.6,11.7,12.2,11.4z "
  />
</svg>
`;

exports[`renders DoubleOccupancy 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M9.0664,3.6 C9.0664,4.484 8.3504,5.2 7.4664,5.2 C6.5824,5.2 5.8664,4.484 5.8664,3.6 C5.8664,2.716 6.5824,2 7.4664,2 C8.3504,2 9.0664,2.716 9.0664,3.6 Z M9.2,5.9336 L9.1992,5.9336 C10.1992,5.9336 11.0664,6.8 11.1328,7.8 L11.1328,12.3336 L9.4664,13.9336 C9.4664,14.0008 9.4664,14.0008 9.4664,14.0672 L9.4664,20.7336 C9.4664,21.4 8.9328,22 8.2664,22 L6.8,22 C6.1328,22 5.6,21.4 5.6664,20.7336 L5.6664,14.0672 C5.6664,14 5.6664,14 5.6664,13.9336 L4,12.3336 L4,7.8 C4,6.8 4.8,5.9336 5.8,5.9336 L9.2,5.9336 Z M17.488887,3.6 C17.488887,4.484 16.772887,5.2 15.888887,5.2 C15.004887,5.2 14.288887,4.484 14.288887,3.6 C14.288887,2.716 15.004887,2 15.888887,2 C16.772887,2 17.488887,2.716 17.488887,3.6 Z M17.6886243,5.9336 C18.6886243,5.9336 19.4886243,6.8 19.5550243,7.8 L19.5550243,12.3336 L17.8886243,13.9336 C17.8886243,14.0008 17.8886243,14.0008 17.8886243,14.0672 L17.8886243,20.7336 C17.8886243,21.4 17.3550243,22 16.6886243,22 L15.2222243,22 C14.5550243,22 14.0886243,21.4 14.0886243,20.7336 L14.0886243,14.0672 C14.0886243,14 14.0886243,14 14.0886243,13.9336 L12.4222243,12.3336 L12.4222243,7.8 C12.4222243,6.8 13.2222243,5.9336 14.2222243,5.9336 L17.6886243,5.9336 Z"
  />
</svg>
`;

exports[`renders Email 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
  />
</svg>
`;

exports[`renders Error 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
  />
</svg>
`;

exports[`renders ErrorOutline 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
</svg>
`;

exports[`renders Event 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
  />
</svg>
`;

exports[`renders EventAvailable 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M16.53 11.06L15.47 10l-4.88 4.88-2.12-2.12-1.06 1.06L10.59 17l5.94-5.94zM19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11z"
  />
</svg>
`;

exports[`renders EventBusy 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M9.31 17l2.44-2.44L14.19 17l1.06-1.06-2.44-2.44 2.44-2.44L14.19 10l-2.44 2.44L9.31 10l-1.06 1.06 2.44 2.44-2.44 2.44L9.31 17zM19 3h-1V1h-2v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11z"
  />
</svg>
`;

exports[`renders EventSeat 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M4 18v3h3v-3h10v3h3v-6H4zm15-8h3v3h-3zM2 10h3v3H2zm15 3H7V5c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v8z"
  />
</svg>
`;

exports[`renders Facebook 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20.9,22H3.1C2.5,22,2,21.5,2,20.9V3.1C2,2.5,2.5,2,3.1,2h17.8C21.5,2,22,2.5,22,3.1v17.8 C22,21.5,21.5,22,20.9,22z M15.8,22v-7.7h2.6l0.4-3h-3V9.3c0-0.9,0.2-1.5,1.5-1.5l1.6,0V5.1c-0.3,0-1.2-0.1-2.3-0.1 c-2.3,0-3.9,1.4-3.9,4v2.2h-2.6v3h2.6V22H15.8z"
  />
</svg>
`;

exports[`renders FavoriteHotel 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,20.9l-1.4-1.3C5.4,14.9,2,11.8,2,8c0-3.1,2.4-5.5,5.5-5.5c1.7,0,3.4,0.8,4.5,2.1 c1.1-1.3,2.8-2.1,4.5-2.1C19.6,2.5,22,4.9,22,8c0,3.8-3.4,6.9-8.6,11.5L12,20.9z M9.7,10.7c0.8,0,1.4-0.6,1.4-1.4s-0.6-1.4-1.4-1.4 C9,7.9,8.4,8.6,8.4,9.3S9,10.7,9.7,10.7z M15.2,7.9h-3.6v3.3H7.9V7H7v7h0.9v-1.4h8.2V14H17V9.8C17,8.8,16.2,7.9,15.2,7.9z"
  />
</svg>
`;

exports[`renders FilterList 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
  />
</svg>
`;

exports[`renders FitnessCenter 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20.57 14.86L22 13.43 20.57 12 17 15.57 8.43 7 12 3.43 10.57 2 9.14 3.43 7.71 2 5.57 4.14 4.14 2.71 2.71 4.14l1.43 1.43L2 7.71l1.43 1.43L2 10.57 3.43 12 7 8.43 15.57 17 12 20.57 13.43 22l1.43-1.43L16.29 22l2.14-2.14 1.43 1.43 1.43-1.43-1.43-1.43L22 16.29z"
  />
</svg>
`;

exports[`renders FlashOn 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7 2v11h3v9l7-12h-4l4-8z"
  />
</svg>
`;

exports[`renders Flight 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10.18 9 M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z"
  />
</svg>
`;

exports[`renders FlightCircle 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z M17,14.2v-1.1l-4.2-2.8v-3 c0-0.5-0.4-0.8-0.8-0.8s-0.8,0.4-0.8,0.8v3L7,13.1v1.1l4.2-1.4v3l-1.1,0.8v0.8L12,17l1.8,0.5v-0.8l-1.1-0.8v-3L17,14.2z"
  />
</svg>
`;

exports[`renders FlightCoverage 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,1l9,4v6c0,5.5-3.8,10.7-9,12c-5.2-1.3-9-6.5-9-12V5L12,1z M17,13.7v-1.1l-4.2-2.8v-3 C12.8,6.4,12.4,6,12,6s-0.8,0.4-0.8,0.8v3L7,12.6v1.1l4.2-1.4v3l-1.1,0.8V17l1.8-0.5l1.8,0.5v-0.8l-1.1-0.8v-3L17,13.7z"
  />
</svg>
`;

exports[`renders FlightLand 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M2.5 19h19v2h-19zm7.18-5.73l4.35 1.16 5.31 1.42c.8.21 1.62-.26 1.84-1.06.21-.8-.26-1.62-1.06-1.84l-5.31-1.42-2.76-9.02L10.12 2v8.28L5.15 8.95l-.93-2.32-1.45-.39v5.17l1.6.43 5.31 1.43z"
  />
</svg>
`;

exports[`renders FlightTakeoff 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M2.5 19h19v2h-19zm19.57-9.36c-.21-.8-1.04-1.28-1.84-1.06L14.92 10l-6.9-6.43-1.93.51 4.14 7.17-4.97 1.33-1.97-1.54-1.45.39 1.82 3.16.77 1.33 1.6-.43 5.31-1.42 4.35-1.16L21 11.49c.81-.23 1.28-1.05 1.07-1.85z"
  />
</svg>
`;

exports[`renders FreeBreakfast 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 3H4v10c0 2.21 1.79 4 4 4h6c2.21 0 4-1.79 4-4v-3h2c1.11 0 2-.9 2-2V5c0-1.11-.89-2-2-2zm0 5h-2V5h2v3zM4 19h16v2H4z"
  />
</svg>
`;

exports[`renders Fridge 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6,21c-0.6,0-1-0.4-1-1V3l0,0c0-0.6,0.4-1,1-1l0,0h12c0.6,0,1,0.4,1,1v17c0,0.6-0.4,1-1,1v1h-2 v-1H8v1H6V21z M19,9V8H5v1H19z M7,4v2h2V4H7z M7,11v6h2v-6H7z"
  />
</svg>
`;

exports[`renders GolfCourse 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17 5.92L9 2v18H7v-1.73c-1.79.35-3 .99-3 1.73 0 1.1 2.69 2 6 2s6-.9 6-2c0-.99-2.16-1.81-5-1.97V8.98l6-3.06z M 19.5 18 A 1.5 1.5 0 0 1 19.5 21 A 1.5 1.5 0 0 1 19.5 18"
  />
</svg>
`;

exports[`renders GpsFixed 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
  />
</svg>
`;

exports[`renders GuestScore 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M 20 2 L 4 2 C 2.894531 2 2 2.894531 2 4 L 2 22 L 6 18 L 20 18 C 21.105469 18 22 17.105469 22 16 L 22 4 C 22 2.894531 21.105469 2 20 2 Z M 15.101563 14.398438 L 12 12.601563 L 8.898438 14.5 L 9.699219 11 L 7 8.601563 L 10.601563 8.300781 L 12 5 L 13.398438 8.300781 L 17 8.601563 L 14.300781 11 Z "
  />
</svg>
`;

exports[`renders Guests 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M16.5,12c1.4,0,2.5-1.1,2.5-2.5S17.9,7,16.5,7S14,8.1,14,9.5S15.1,12,16.5,12z M9,11 c1.7,0,3-1.3,3-3s-1.3-3-3-3S6,6.3,6,8S7.3,11,9,11z M16.5,14c-1.8,0-5.5,0.9-5.5,2.8V19h11v-2.2C22,14.9,18.3,14,16.5,14z M9,13 c-2.3,0-7,1.2-7,3.5V19h7v-2.2c0-0.9,0.3-2.3,2.4-3.5C10.5,13.1,9.7,13,9,13z"
  />
</svg>
`;

exports[`renders Help 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
  />
</svg>
`;

exports[`renders History 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
  />
</svg>
`;

exports[`renders Home 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
  />
</svg>
`;

exports[`renders HotTub 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M 7 4 A 2 2 0 0 1 7 8 A 2 2 0 0 1 7 4 M11.15 12c-.31-.22-.59-.46-.82-.72l-1.4-1.55c-.19-.21-.43-.38-.69-.5-.29-.14-.62-.23-.96-.23h-.03C6.01 9 5 10.01 5 11.25V12H2v8c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-8H11.15zM7 20H5v-6h2v6zm4 0H9v-6h2v6zm4 0h-2v-6h2v6zm4 0h-2v-6h2v6zm-.35-14.14l-.07-.07c-.57-.62-.82-1.41-.67-2.2L18 3h-1.89l-.06.43c-.2 1.36.27 2.71 1.3 3.72l.07.06c.57.62.82 1.41.67 2.2l-.11.59h1.91l.06-.43c.21-1.36-.27-2.71-1.3-3.71zm-4 0l-.07-.07c-.57-.62-.82-1.41-.67-2.2L14 3h-1.89l-.06.43c-.2 1.36.27 2.71 1.3 3.72l.07.06c.57.62.82 1.41.67 2.2l-.11.59h1.91l.06-.43c.21-1.36-.27-2.71-1.3-3.71z"
  />
</svg>
`;

exports[`renders Hotel 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7 13c1.66 0 3-1.34 3-3S8.66 7 7 7s-3 1.34-3 3 1.34 3 3 3zm12-6h-8v7H3V5H1v15h2v-3h18v3h2v-9c0-2.21-1.79-4-4-4z"
  />
</svg>
`;

exports[`renders HotelCircle 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z M9.7,12.2 c0.8,0,1.4-0.6,1.4-1.4s-0.6-1.4-1.4-1.4c-0.8,0-1.4,0.6-1.4,1.4S9,12.2,9.7,12.2z M15.2,9.4h-3.6v3.3H7.9V8.5H7v7h0.9v-1.4h8.2v1.4 H17v-4.2C17,10.3,16.2,9.4,15.2,9.4z"
  />
</svg>
`;

exports[`renders House 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M4.5,3a0.83,0.83,0,0,0-.81.63h0v0L2,10.29a0.83,0.83,0,0,0,.81,1v8.33A1.68,1.68,0,0,0,4.5,21.33h15a1.68,1.68,0,0,0,1.67-1.67V11.33a0.83,0.83,0,0,0,.81-1L20.31,3.63h0A0.83,0.83,0,0,0,19.5,3H4.5ZM12,6.33l5,5h2.5v8.33H13.67V15.5a1.67,1.67,0,0,0-3.33,0v4.17H4.5V11.33H7Zm-5.83,7.5v2.5h2.5v-2.5H6.17Zm9.17,0v2.5h2.5v-2.5h-2.5Z"
  />
</svg>
`;

exports[`renders Hybrid 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17,7.5c-9,2-11.1,8.2-13.2,13.3l1.9,0.7l0.9-2.3c0.5,0.2,1,0.3,1.4,0.3c11,0,14-17,14-17c-1,2-8,2.2-13,3.2 s-7,5.2-7,7.2s1.8,3.8,1.8,3.8C7,7.5,17,7.5,17,7.5z"
  />
</svg>
`;

exports[`renders Image 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
  />
</svg>
`;

exports[`renders IndeterminateCheckBox 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
  />
</svg>
`;

exports[`renders Info 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
  />
</svg>
`;

exports[`renders InfoOutline 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
  />
</svg>
`;

exports[`renders InsertEmoticon 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
  />
</svg>
`;

exports[`renders Instagram 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21.9,7.9c0-1.1-0.2-1.8-0.5-2.4c-0.3-0.7-0.6-1.2-1.2-1.8s-1.1-0.9-1.8-1.2c-0.6-0.2-1.4-0.4-2.4-0.5 C15.1,2,14.7,2,12,2S8.9,2,7.9,2.1c-1.1,0-1.8,0.2-2.4,0.5C4.8,2.8,4.2,3.1,3.7,3.7S2.8,4.8,2.5,5.5C2.3,6.1,2.1,6.8,2.1,7.9 C2,8.9,2,9.3,2,12s0,3.1,0.1,4.1c0,1.1,0.2,1.8,0.5,2.4c0.3,0.7,0.6,1.2,1.2,1.8s1.1,0.9,1.8,1.2c0.6,0.2,1.4,0.4,2.4,0.5 C8.9,22,9.3,22,12,22s3.1,0,4.1-0.1c1.1,0,1.8-0.2,2.4-0.5c0.7-0.3,1.2-0.6,1.8-1.2s0.9-1.1,1.2-1.8c0.2-0.6,0.4-1.4,0.5-2.4 c0-1.1,0.1-1.4,0.1-4.1S22,8.9,21.9,7.9z M20.1,16c0,1-0.2,1.5-0.3,1.9c-0.2,0.5-0.4,0.8-0.7,1.1c-0.3,0.3-0.7,0.6-1.1,0.7 c-0.4,0.1-0.9,0.3-1.9,0.3c-1.1,0-1.4,0.1-4,0.1c-2.7,0-3,0-4-0.1c-1,0-1.5-0.2-1.9-0.3C5.6,19.6,5.3,19.4,5,19 c-0.3-0.3-0.6-0.7-0.7-1.1C4.1,17.5,3.9,17,3.9,16c0-1.1-0.1-1.4-0.1-4s0-3,0.1-4c0-1,0.2-1.5,0.3-1.9C4.4,5.6,4.6,5.3,5,5 c0.3-0.3,0.7-0.6,1.1-0.7C6.5,4.1,7,3.9,8,3.9c1.1,0,1.4-0.1,4-0.1s3,0,4,0.1c1,0,1.5,0.2,1.9,0.3C18.4,4.4,18.7,4.6,19,5 c0.3,0.3,0.6,0.7,0.7,1.1C19.9,6.5,20.1,7,20.1,8c0,1.1,0.1,1.4,0.1,4S20.2,15,20.1,16z M12,6.9c-2.8,0-5.1,2.3-5.1,5.1 s2.3,5.1,5.1,5.1s5.1-2.3,5.1-5.1S14.8,6.9,12,6.9z M12,15.3c-1.8,0-3.3-1.5-3.3-3.3s1.5-3.3,3.3-3.3s3.3,1.5,3.3,3.3 S13.8,15.3,12,15.3z M18.5,6.7c0,0.7-0.5,1.2-1.2,1.2c-0.7,0-1.2-0.5-1.2-1.2s0.5-1.2,1.2-1.2C18,5.5,18.5,6,18.5,6.7z"
  />
</svg>
`;

exports[`renders KeyboardArrowDown 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
  />
</svg>
`;

exports[`renders KeyboardArrowUp 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
  />
</svg>
`;

exports[`renders Kitchenette 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,2H4C3.4,2,3,2.4,3,3v3h18V3C21,2.4,20.6,2,20,2z M6,5C5.5,5,5,4.5,5,4s0.5-1,1-1s1,0.5,1,1S6.5,5,6,5z M10,5C9.5,5,9,4.5,9,4s0.5-1,1-1s1,0.5,1,1S10.5,5,10,5z M14,5c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S14.5,5,14,5z M18,5 c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S18.5,5,18,5z M3,20c0,0.6,0.4,1,1,1h1v1h2v-1h10v1h2v-1h1c0.6,0,1-0.4,1-1V7H3V20z M7,8h10v1 H7V8z M5,10h14v9H5V10z"
  />
</svg>
`;

exports[`renders Language 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"
  />
</svg>
`;

exports[`renders Laptop 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 18c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2H0v2h24v-2h-4zM4 6h16v10H4V6z"
  />
</svg>
`;

exports[`renders LateNight 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z M12.8,7c-2.9,0-5.3,2.2-5.3,5 s2.4,5,5.3,5c1,0,1.9-0.2,2.7-0.7c-1.6-0.9-2.7-2.5-2.7-4.3s1.1-3.5,2.7-4.3C14.7,7.2,13.8,7,12.8,7z"
  />
</svg>
`;

exports[`renders List 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"
  />
</svg>
`;

exports[`renders LocalBar 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21 5V3H3v2l8 9v5H6v2h12v-2h-5v-5l8-9zM7.43 7L5.66 5h12.69l-1.78 2H7.43z"
  />
</svg>
`;

exports[`renders LocalDining 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z"
  />
</svg>
`;

exports[`renders LocalGasStation 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
  />
</svg>
`;

exports[`renders LocalParking 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M13 3H6v18h4v-6h3c3.31 0 6-2.69 6-6s-2.69-6-6-6zm.2 8H10V7h3.2c1.1 0 2 .9 2 2s-.9 2-2 2z"
  />
</svg>
`;

exports[`renders LocalPhone 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
  />
</svg>
`;

exports[`renders LocationCity 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
  />
</svg>
`;

exports[`renders LocationOn 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
  />
</svg>
`;

exports[`renders Lock 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
  />
</svg>
`;

exports[`renders Manual 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8 s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M7.4,8h2l2.5,4.9L14.4,8h2v8h-1.6v-5.4l-2.3,4.6h-1.1l-2.3-4.6V16H7.4V8z"
  />
</svg>
`;

exports[`renders Map 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20.5 3l-.16.03L15 5.1 9 3 3.36 4.9c-.21.07-.36.25-.36.48V20.5c0 .28.22.5.5.5l.16-.03L9 18.9l6 2.1 5.64-1.9c.21-.07.36-.25.36-.48V3.5c0-.28-.22-.5-.5-.5zM15 19l-6-2.11V5l6 2.11V19z"
  />
</svg>
`;

exports[`renders Menu 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
  />
</svg>
`;

exports[`renders Microwave 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21,5.5H3c-0.6,0-1,0.4-1,1v10c0,0.6,0.4,1,1,1h1v1h2v-1h12v1h2v-1h1c0.6,0,1-0.4,1-1v-10 C22,5.9,21.6,5.5,21,5.5z M15,15.5H4v-8h11V15.5z M17,15.5c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S17.5,15.5,17,15.5z M17,12.5 c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S17.5,12.5,17,12.5z M17,9.5c-0.5,0-1-0.5-1-1s0.5-1,1-1s1,0.5,1,1S17.5,9.5,17,9.5z M20,15.5 h-1v-8h1V15.5z"
  />
</svg>
`;

exports[`renders Mileage 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,16c-1.7,0-3-1.3-3-3c0-1.1,0.6-2.1,1.5-2.6l9.7-5.6l-5.5,9.6C14.2,15.3,13.2,16,12,16L12,16 z M12,3c1.8,0,3.5,0.5,5,1.3l-2.1,1.2C14,5.2,13,5,12,5c-4.4,0-8,3.6-8,8c0,2.2,0.9,4.2,2.3,5.6l0,0c0.4,0.4,0.4,1,0,1.4 c-0.4,0.4-1,0.4-1.4,0l0,0C3.1,18.3,2,15.8,2,13C2,7.5,6.5,3,12,3L12,3z M22,13c0,2.8-1.1,5.3-2.9,7.1l0,0c-0.4,0.4-1,0.4-1.4,0 c-0.4-0.4-0.4-1,0-1.4l0,0c1.5-1.4,2.3-3.4,2.3-5.6c0-1-0.2-2-0.5-2.9L20.7,8C21.5,9.5,22,11.2,22,13z"
  />
</svg>
`;

exports[`renders ModeEdit 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
  />
</svg>
`;

exports[`renders MonetizationOn 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1.41 16.09V20h-2.67v-1.93c-1.71-.36-3.16-1.46-3.27-3.4h1.96c.1 1.05.82 1.87 2.65 1.87 1.96 0 2.4-.98 2.4-1.59 0-.83-.44-1.61-2.67-2.14-2.48-.6-4.18-1.62-4.18-3.67 0-1.72 1.39-2.84 3.11-3.21V4h2.67v1.95c1.86.45 2.79 1.86 2.85 3.39H14.3c-.05-1.11-.64-1.87-2.22-1.87-1.5 0-2.4.68-2.4 1.64 0 .84.65 1.39 2.67 1.91s4.18 1.39 4.18 3.91c-.01 1.83-1.38 2.83-3.12 3.16z"
  />
</svg>
`;

exports[`renders Mood 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
  />
</svg>
`;

exports[`renders MultiOccupancy 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21.2366651,11.7134731 L23.4985331,11.7134731 L23.4985331,13.4601385 L21.2366651,13.4601385 L21.2366651,15.7279206 L19.4899998,15.7279206 L19.4899998,13.4601385 L17.2199993,13.4601385 L17.2199993,11.7134731 L19.4899998,11.7134731 L19.4899998,9.44495183 L21.2366651,9.44495183 L21.2366651,11.7134731 Z M10.3678561,4.30104833 C10.3678561,5.18509899 9.65085844,5.90209661 8.76680777,5.90209661 C7.88275711,5.90209661 7.16575949,5.18509899 7.16575949,4.30104833 C7.16575949,3.41699766 7.88275711,2.70000005 8.76680777,2.70000005 C9.65085844,2.70000005 10.3678561,3.41699766 10.3678561,4.30104833 Z M5.25128674,5.90357495 C5.25128674,6.652357 4.64442587,7.25921786 3.89564383,7.25921786 C3.14686178,7.25921786 2.54000092,6.652357 2.54000092,5.90357495 C2.54000092,5.15479291 3.14686178,4.54793204 3.89564383,4.54793204 C4.64442587,4.54793204 5.25128674,5.15479291 5.25128674,5.90357495 Z M4.69586399,12.3713369 L4.69512482,12.3713369 L4.69512482,12.4289924 L6.05076773,13.7846353 L5.43429761,14.4011054 L5.43429761,19.9493365 C5.43429761,20.5037161 5.0026207,20.9960051 4.4482411,20.9960051 L3.27960891,20.9960051 C2.72522931,20.9960051 2.2935524,20.5037161 2.2935524,19.9493365 L2.2935524,14.4055405 L1,13.1119881 L1,9.35403357 C1,8.55277026 1.7391728,7.81359746 2.54043611,7.81359746 L4.7579545,7.81359746 C4.69586399,7.87420963 4.69586399,7.99839066 4.69586399,8.12109335 L4.69586399,12.3713369 Z M14.931287,5.90357495 C14.931287,6.652357 14.3244262,7.25921786 13.5756441,7.25921786 C12.8268621,7.25921786 12.2200012,6.652357 12.2200012,5.90357495 C12.2200012,5.15479291 12.8268621,4.54793204 13.5756441,4.54793204 C14.3244262,4.54793204 14.931287,5.15479291 14.931287,5.90357495 Z M15.0558646,7.81211912 L15.0551254,7.81285829 C16.533471,7.81285829 16.533471,9.3532944 16.533471,9.3532944 L16.533471,13.0491584 L15.1800456,14.4025838 L15.1800456,19.9463798 C15.1800456,20.5007594 14.7483687,20.9930484 14.1939891,20.9930484 L13.0231394,20.9930484 C12.529372,20.9930484 12.0370829,20.5007594 12.0370829,19.9463798 L12.0370829,14.4025838 L11.3600006,13.7255015 L12.7156435,12.3698586 L12.7156435,8.119615 C12.7156435,7.99691232 12.7156435,7.9348218 12.7156435,7.81211912 L15.0558646,7.81211912 Z M10.3700736,6.58065724 C11.8506367,6.58065724 11.8484192,8.12109335 11.8462016,8.12109335 L11.8462016,12.2486342 L10.3678561,13.7269798 C10.3678561,13.787592 10.3678561,13.787592 10.3678561,13.8496825 L10.3678561,19.9478581 C10.3678561,20.5643282 10.0603602,21.2414105 9.44389006,21.2414105 L8.15033766,21.2414105 C7.59595806,21.2414105 6.97948795,20.5643282 6.97948795,19.9478581 L6.97948795,13.8496825 C6.97948795,13.7890704 6.97948795,13.7890704 6.97948795,13.7269798 L6.85678526,13.6042772 L5.44053018,12.2486342 L5.44053018,8.12109335 C5.44053018,7.99691232 5.74802607,6.58065724 7.28846218,6.58065724 L10.3700736,6.58065724 Z"
  />
</svg>
`;

exports[`renders NotificationsActive 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7.58 4.08L6.15 2.65C3.75 4.48 2.17 7.3 2.03 10.5h2c.15-2.65 1.51-4.97 3.55-6.42zm12.39 6.42h2c-.15-3.2-1.73-6.02-4.12-7.85l-1.42 1.43c2.02 1.45 3.39 3.77 3.54 6.42zM18 11c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2v-5zm-6 11c.14 0 .27-.01.4-.04.65-.14 1.18-.58 1.44-1.18.1-.24.15-.5.15-.78h-4c.01 1.1.9 2 2.01 2z"
  />
</svg>
`;

exports[`renders Overnight 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17.6,8.2l0.6,2L16.5,9l-1.7,1.2l0.6-2l-1.7-1.3h2.1l0.7-2l0.7,2h2.1L17.6,8.2z M19.4,19 C15.4,23,9,23,5,19C1,15,1,8.6,5,4.6C6.3,3.3,7.9,2.4,9.5,2c-0.9,3.4,0,7.2,2.6,9.8c2.7,2.7,6.4,3.5,9.8,2.6 C21.6,16.1,20.7,17.7,19.4,19L19.4,19z"
  />
</svg>
`;

exports[`renders Person 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
  />
</svg>
`;

exports[`renders Pets 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M 4.5 7 A 2.5 2.5 0 0 1 4.5 12 A 2.5 2.5 0 0 1 4.5 7 M 9 3 A 2.5 2.5 0 0 0 9 8 A 2.5 2.5 0 0 0 9 3 M 15 3 A 2.5 2.5 0 0 1 15 8 A 2.5 2.5 0 0 1 15 3 M 19.5 7 A 2.5 2.5 0 0 0 19.5 12 A 2.5 2.5 0 0 0 19.5 7 M17.34 14.86c-.87-1.02-1.6-1.89-2.48-2.91-.46-.54-1.05-1.08-1.75-1.32-.11-.04-.22-.07-.33-.09-.25-.04-.52-.04-.78-.04s-.53 0-.79.05c-.11.02-.22.05-.33.09-.7.24-1.28.78-1.75 1.32-.87 1.02-1.6 1.89-2.48 2.91-1.31 1.31-2.92 2.76-2.62 4.79.29 1.02 1.02 2.03 2.33 2.32.73.15 3.06-.44 5.54-.44h.18c2.48 0 4.81.58 5.54.44 1.31-.29 2.04-1.31 2.33-2.32.31-2.04-1.3-3.49-2.61-4.8z"
  />
</svg>
`;

exports[`renders PhotoLibrary 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M22 16V4c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2zm-11-4l2.03 2.71L16 11l4 5H8l3-4zM2 6v14c0 1.1.9 2 2 2h14v-2H4V6H2z"
  />
</svg>
`;

exports[`renders Poll 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
  />
</svg>
`;

exports[`renders Pool 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M22 21c-1.11 0-1.73-.37-2.18-.64-.37-.22-.6-.36-1.15-.36-.56 0-.78.13-1.15.36-.46.27-1.07.64-2.18.64s-1.73-.37-2.18-.64c-.37-.22-.6-.36-1.15-.36-.56 0-.78.13-1.15.36-.46.27-1.08.64-2.19.64-1.11 0-1.73-.37-2.18-.64-.37-.23-.6-.36-1.15-.36s-.78.13-1.15.36c-.46.27-1.08.64-2.19.64v-2c.56 0 .78-.13 1.15-.36.46-.27 1.08-.64 2.19-.64s1.73.37 2.18.64c.37.23.59.36 1.15.36.56 0 .78-.13 1.15-.36.46-.27 1.08-.64 2.19-.64 1.11 0 1.73.37 2.18.64.37.22.6.36 1.15.36s.78-.13 1.15-.36c.45-.27 1.07-.64 2.18-.64s1.73.37 2.18.64c.37.23.59.36 1.15.36v2zm0-4.5c-1.11 0-1.73-.37-2.18-.64-.37-.22-.6-.36-1.15-.36-.56 0-.78.13-1.15.36-.45.27-1.07.64-2.18.64s-1.73-.37-2.18-.64c-.37-.22-.6-.36-1.15-.36-.56 0-.78.13-1.15.36-.45.27-1.07.64-2.18.64s-1.73-.37-2.18-.64c-.37-.22-.6-.36-1.15-.36s-.78.13-1.15.36c-.47.27-1.09.64-2.2.64v-2c.56 0 .78-.13 1.15-.36.45-.27 1.07-.64 2.18-.64s1.73.37 2.18.64c.37.22.6.36 1.15.36.56 0 .78-.13 1.15-.36.45-.27 1.07-.64 2.18-.64s1.73.37 2.18.64c.37.22.6.36 1.15.36s.78-.13 1.15-.36c.45-.27 1.07-.64 2.18-.64s1.73.37 2.18.64c.37.22.6.36 1.15.36v2zM8.67 12c.56 0 .78-.13 1.15-.36.46-.27 1.08-.64 2.19-.64 1.11 0 1.73.37 2.18.64.37.22.6.36 1.15.36s.78-.13 1.15-.36c.12-.07.26-.15.41-.23L10.48 5C8.93 3.45 7.5 2.99 5 3v2.5c1.82-.01 2.89.39 4 1.5l1 1-3.25 3.25c.31.12.56.27.77.39.37.23.59.36 1.15.36z M 16.5 3 A 2.5 2.5 0 0 1 16.5 8 A 2.5 2.5 0 0 1 16.5 3"
  />
</svg>
`;

exports[`renders Print 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
  />
</svg>
`;

exports[`renders QueryBuilder 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
  />
</svg>
`;

exports[`renders RadioButtonChecked 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
</svg>
`;

exports[`renders RadioButtonUnchecked 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
  />
</svg>
`;

exports[`renders Refresh 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
  />
</svg>
`;

exports[`renders Remove 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19 13H5v-2h14v2z"
  />
</svg>
`;

exports[`renders RemoveCircleOutline 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
  />
</svg>
`;

exports[`renders ReportProblem 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
  />
</svg>
`;

exports[`renders Restaurant 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"
  />
</svg>
`;

exports[`renders Ribbon 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11,17.5c0.1,0,0.1,0,0.2-0.1L9,22l-1.5-2L5,20.2l2.1-4.4h0.1c0.2,0.2,0.4,0.4,0.6,0.7c0.4,0.5,0.8,1,1.4,1.2 c0.2,0.1,0.4,0.1,0.5,0.1C10.2,17.8,10.6,17.7,11,17.5z M16.8,15.8c-0.2,0.2-0.4,0.4-0.6,0.7c-0.4,0.5-0.8,1-1.4,1.2 c-0.6,0.2-1.2,0-1.8-0.2c-0.1,0-0.1,0-0.2-0.1L15,22l1.5-2l2.5,0.2L16.8,15.8L16.8,15.8z M20,9.4c0,0.3-0.3,0.7-0.6,1.1 c-0.2,0.3-0.5,0.7-0.6,1c-0.1,0.4-0.1,0.8-0.1,1.2c0,0.5,0,0.9-0.2,1.2s-0.6,0.4-1.1,0.6c-0.4,0.1-0.8,0.3-1.2,0.5 c-0.3,0.2-0.6,0.6-0.8,0.9c-0.3,0.4-0.6,0.7-0.9,0.8c-0.3,0.1-0.7,0-1.2-0.2c-0.4-0.1-0.8-0.2-1.3-0.2c-0.4,0-0.9,0.1-1.3,0.2 c-0.5,0.1-0.9,0.3-1.2,0.2c-0.3-0.1-0.6-0.5-0.9-0.8c-0.3-0.3-0.5-0.7-0.8-0.9S7,14.6,6.6,14.5c-0.5-0.2-0.9-0.3-1.1-0.6 s-0.2-0.7-0.2-1.2c0-0.4,0-0.8-0.1-1.2s-0.4-0.7-0.6-1C4.3,10.1,4,9.8,4,9.4s0.3-0.7,0.6-1.1C4.8,8,5,7.7,5.2,7.3 C5.3,6.9,5.3,6.4,5.3,6c0-0.5,0-0.9,0.2-1.2c0.2-0.3,0.6-0.4,1.1-0.6C7,4.2,7.4,4,7.8,3.8c0.3-0.2,0.6-0.6,0.8-0.9 C8.9,2.5,9.2,2.1,9.5,2c0.1,0,0.2,0,0.2,0c0.3,0,0.6,0.1,0.9,0.2c0.4,0.1,0.8,0.2,1.3,0.2c0.4,0,0.9-0.1,1.3-0.2 c0.5-0.1,0.9-0.3,1.2-0.2s0.6,0.5,0.9,0.8c0.3,0.3,0.5,0.7,0.8,0.9C16.6,4,17,4.2,17.4,4.3c0.5,0.2,0.9,0.3,1.1,0.6 c0.2,0.3,0.2,0.7,0.2,1.2c0,0.4,0,0.8,0.1,1.2c0.1,0.4,0.4,0.7,0.6,1C19.7,8.7,20,9.1,20,9.4z M16.5,7.6l-0.9-0.9l-4.9,4.9L8.4,9.3 l-0.9,0.9l3.2,3.2L16.5,7.6z"
  />
</svg>
`;

exports[`renders RoomSize 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,13H9.6v3L6,12l3.6-4v3H12h2.4V8l3.6,4l-3.6,4v-3H12z M3,3h18c0.6,0,1,0.4,1,1v16 c0,0.6-0.4,1-1,1H3c-0.6,0-1-0.4-1-1V4l0,0C2,3.4,2.4,3,3,3L3,3z M4,5v14h16V5H4z"
  />
</svg>
`;

exports[`renders Rowing 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M8.5 14.5L4 19l1.5 1.5L9 17h2l-2.5-2.5zM15 1c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 20.01L18 24l-2.99-3.01V19.5l-7.1-7.09c-.31.05-.61.07-.91.07v-2.16c1.66.03 3.61-.87 4.67-2.04l1.4-1.55c.19-.21.43-.38.69-.5.29-.14.62-.23.96-.23h.03C15.99 6.01 17 7.02 17 8.26v5.75c0 .84-.35 1.61-.92 2.16l-3.58-3.58v-2.27c-.63.52-1.43 1.02-2.29 1.39L16.5 18H18l3 3.01z"
  />
</svg>
`;

exports[`renders Schedule 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
  />
</svg>
`;

exports[`renders Search 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
  />
</svg>
`;

exports[`renders Security 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"
  />
</svg>
`;

exports[`renders ShowChart 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3.5 18.49l6-6.01 4 4L22 6.92l-1.41-1.41-7.09 7.97-4-4L2 16.99z"
  />
</svg>
`;

exports[`renders SingleOccupancy 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M13.0664,3.6 C13.0664,4.484 12.3504,5.2 11.4664,5.2 C10.5824,5.2 9.8664,4.484 9.8664,3.6 C9.8664,2.716 10.5824,2 11.4664,2 C12.3504,2 13.0664,2.716 13.0664,3.6 Z M13.2,5.9336 L13.1992,5.9336 C14.1992,5.9336 15.0664,6.8 15.1328,7.8 L15.1328,12.3336 L13.4664,13.9336 C13.4664,14.0008 13.4664,14.0008 13.4664,14.0672 L13.4664,20.7336 C13.4664,21.4 12.9328,22 12.2664,22 L10.8,22 C10.1328,22 9.6,21.4 9.6664,20.7336 L9.6664,14.0672 C9.6664,14 9.6664,14 9.6664,13.9336 L8,12.3336 L8,7.8 C8,6.8 8.8,5.9336 9.8,5.9336 L13.2,5.9336 Z"
  />
</svg>
`;

exports[`renders SmokeFree 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M2 6l6.99 7H2v3h9.99l7 7 1.26-1.25-17-17zm18.5 7H22v3h-1.5zM18 13h1.5v3H18zm.85-8.12c.62-.61 1-1.45 1-2.38h-1.5c0 1.02-.83 1.85-1.85 1.85v1.5c2.24 0 4 1.83 4 4.07V12H22V9.92c0-2.23-1.28-4.15-3.15-5.04zM14.5 8.7h1.53c1.05 0 1.97.74 1.97 2.05V12h1.5v-1.59c0-1.8-1.6-3.16-3.47-3.16H14.5c-1.02 0-1.85-.98-1.85-2s.83-1.75 1.85-1.75V2c-1.85 0-3.35 1.5-3.35 3.35s1.5 3.35 3.35 3.35zm2.5 7.23V13h-2.93z"
  />
</svg>
`;

exports[`renders Spa 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M8.55 12c-1.07-.71-2.25-1.27-3.53-1.61 1.28.34 2.46.9 3.53 1.61zm10.43-1.61c-1.29.34-2.49.91-3.57 1.64 1.08-.73 2.28-1.3 3.57-1.64z M15.49 9.63c-.18-2.79-1.31-5.51-3.43-7.63-2.14 2.14-3.32 4.86-3.55 7.63 1.28.68 2.46 1.56 3.49 2.63 1.03-1.06 2.21-1.94 3.49-2.63zm-6.5 2.65c-.14-.1-.3-.19-.45-.29.15.11.31.19.45.29zm6.42-.25c-.13.09-.27.16-.4.26.13-.1.27-.17.4-.26zM12 15.45C9.85 12.17 6.18 10 2 10c0 5.32 3.36 9.82 8.03 11.49.63.23 1.29.4 1.97.51.68-.12 1.33-.29 1.97-.51C18.64 19.82 22 15.32 22 10c-4.18 0-7.85 2.17-10 5.45z"
  />
</svg>
`;

exports[`renders SplitTicket 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20,12c0,1.1,0.9,2,2,2v4c0,1.1-0.9,2-2,2H4c-1.1,0-2-0.9-2-2v-4c1.1,0,2-0.9,2-2s-0.9-2-2-2V6 c0-1.1,0.9-2,2-2h16c1.1,0,2,0.9,2,2v4C20.9,10,20,10.9,20,12z M17,14.2v-1.1l-4.2-2.8v-3c0-0.5-0.4-0.8-0.8-0.8s-0.8,0.4-0.8,0.8v3 L7,13.1v1.1l4.2-1.4v3l-1.1,0.8v0.8L12,17l1.8,0.5v-0.8l-1.1-0.8v-3L17,14.2z"
  />
</svg>
`;

exports[`renders Star 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
  />
</svg>
`;

exports[`renders StarHalf 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,17.8V2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
  />
</svg>
`;

exports[`renders SteeringWheel 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M11,19.9c0-4.6-0.7-6.9-2-6.9c-1.3,0-3,0-4.9,0C4.5,16.6,7.4,19.5,11,19.9z M4.1,11 C6.7,9.7,9.4,9,12,9s5.3,0.7,7.9,2C19.4,7,16.1,4,12,4S4.6,7,4.1,11z M19.9,13c-2,0-3.6,0-4.9,0c-1.3,0-2,2.3-2,6.9 C16.6,19.5,19.5,16.6,19.9,13z M12,2c5.5,0,10,4.5,10,10s-4.5,10-10,10S2,17.5,2,12S6.5,2,12,2z"
  />
</svg>
`;

exports[`renders SuccessOutline 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8 s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z M10.3,16.5L6,12.2L7.2,11l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
  />
</svg>
`;

exports[`renders SwapVert 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M16 17.01V10h-2v7.01h-3L15 21l4-3.99h-3zM9 3L5 6.99h3V14h2V6.99h3L9 3z"
  />
</svg>
`;

exports[`renders ThumbDown 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z"
  />
</svg>
`;

exports[`renders ThumbUp 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z"
  />
</svg>
`;

exports[`renders Timer 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
  />
</svg>
`;

exports[`renders TrendingUp 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
  />
</svg>
`;

exports[`renders Trophy 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M19.4,3h-0.6h-1.4c-0.8,0-1.8,0.9-1.8,1.8H8.4c0-0.9-1-1.8-1.8-1.8H5.2H4.6H3v8.1 c0,0.9,0.9,1.8,1.8,1.8h2c0.4,1.8,1.5,3.3,4.3,3.6v1.9c-2,0.2-2.7,1.2-2.7,2.3V21h7.2v-0.3c0-1.2-0.7-2.2-2.7-2.3v-1.9 c2.8-0.3,4-1.8,4.3-3.6h2c0.9,0,1.8-0.9,1.8-1.8V3H19.4L19.4,3z M4.8,11.1V4.8h1.8v1.8v4.5C5.8,11.1,5.1,11.1,4.8,11.1L4.8,11.1z M19.2,11.1c-0.3,0-1,0-1.8,0V6.6V4.8h1.8V11.1z"
  />
</svg>
`;

exports[`renders Tune 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M3 17v2h6v-2H3zM3 5v2h10V5H3zm10 16v-2h8v-2h-8v-2h-2v6h2zM7 9v2H3v2h4v2h2V9H7zm14 4v-2H11v2h10zm-6-4h2V7h4V5h-4V3h-2v6z"
  />
</svg>
`;

exports[`renders Twitter 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M8.3,19.8c7.5,0,11.7-6.3,11.7-11.7c0-0.2,0-0.4,0-0.5c0.8-0.6,1.5-1.3,2-2.1c-0.7,0.3-1.5,0.5-2.4,0.6 c0.9-0.5,1.5-1.3,1.8-2.3c-0.8,0.5-1.7,0.8-2.6,1c-1.3-1.4-3.3-1.7-4.9-0.8s-2.5,2.7-2.1,4.5C8.5,8.4,5.5,6.8,3.4,4.2 C2.3,6.1,2.9,8.5,4.7,9.7C4,9.7,3.4,9.5,2.8,9.2c0,0,0,0,0,0.1c0,2,1.4,3.6,3.3,4c-0.6,0.2-1.2,0.2-1.9,0.1c0.5,1.7,2.1,2.8,3.8,2.8 C6.6,17.3,4.8,18,3,18c-0.3,0-0.7,0-1-0.1C3.9,19.1,6.1,19.8,8.3,19.8"
  />
</svg>
`;

exports[`renders Unlock 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M18,9.5c1.1,0,2,0.9,2,2v8c0,1.1-0.9,2-2,2H6c-1.1,0-2-0.9-2-2v-8c0-1.1,0.9-2,2-2h9.1v-2 c0-1.7-1.4-3.1-3.1-3.1S8.9,5.8,8.9,7.5H7c0-2.8,2.2-5,5-5s5,2.2,5,5v2H18z M12,17.5c1.1,0,2-0.9,2-2s-0.9-2-2-2s-2,0.9-2,2 S10.9,17.5,12,17.5z"
  />
</svg>
`;

exports[`renders VerifiedUser 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
  />
</svg>
`;

exports[`renders ViewQuilt 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M10 18h5v-6h-5v6zm-6 0h5V5H4v13zm12 0h5v-6h-5v6zM10 5v6h11V5H10z"
  />
</svg>
`;

exports[`renders VpnKey 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M12.65 10C11.83 7.67 9.61 6 7 6c-3.31 0-6 2.69-6 6s2.69 6 6 6c2.61 0 4.83-1.67 5.65-4H17v4h4v-4h2v-4H12.65zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
  />
</svg>
`;

exports[`renders Web 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm-5 14H4v-4h11v4zm0-5H4V9h11v4zm5 5h-4V9h4v9z"
  />
</svg>
`;

exports[`renders Whatshot 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M13.5.67s.74 2.65.74 4.8c0 2.06-1.35 3.73-3.41 3.73-2.07 0-3.63-1.67-3.63-3.73l.03-.36C5.21 7.51 4 10.62 4 14c0 4.42 3.58 8 8 8s8-3.58 8-8C20 8.61 17.41 3.8 13.5.67zM11.71 19c-1.78 0-3.22-1.4-3.22-3.14 0-1.62 1.05-2.76 2.81-3.12 1.77-.36 3.6-1.21 4.62-2.58.39 1.29.59 2.65.59 4.04 0 2.65-2.15 4.8-4.8 4.8z"
  />
</svg>
`;

exports[`renders Wifi 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M1 9l2 2c4.97-4.97 13.03-4.97 18 0l2-2C16.93 2.93 7.08 2.93 1 9zm8 8l3 3 3-3c-1.65-1.66-4.34-1.66-6 0zm-4-4l2 2c2.76-2.76 7.24-2.76 10 0l2-2C15.14 9.14 8.87 9.14 5 13z"
  />
</svg>
`;

exports[`renders Work 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M20 6h-4V4c0-1.11-.89-2-2-2h-4c-1.11 0-2 .89-2 2v2H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-6 0h-4V4h4v2z"
  />
</svg>
`;

exports[`renders Youtube 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M21.5,6.8c0.4,1.6,0.4,4.8,0.4,4.8s0,3.2-0.4,4.8c-0.2,0.9-0.9,1.5-1.8,1.8 c-1.6,0.4-7.8,0.4-7.8,0.4s-6.2,0-7.8-0.4c-0.9-0.2-1.5-0.9-1.8-1.8C2,14.9,2,11.6,2,11.6s0-3.2,0.4-4.8C2.6,6,3.3,5.3,4.2,5.1 C5.7,4.7,12,4.7,12,4.7s6.2,0,7.8,0.4C20.6,5.3,21.3,6,21.5,6.8z M10,14.6l5.2-3l-5.2-3V14.6z"
  />
</svg>
`;

exports[`renders YoutubeSearchedFor 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M17.01 14h-.8l-.27-.27c.98-1.14 1.57-2.61 1.57-4.23 0-3.59-2.91-6.5-6.5-6.5s-6.5 3-6.5 6.5H2l3.84 4 4.16-4H6.51C6.51 7 8.53 5 11.01 5s4.5 2.01 4.5 4.5c0 2.48-2.02 4.5-4.5 4.5-.65 0-1.26-.14-1.82-.38L7.71 15.1c.97.57 2.09.9 3.3.9 1.61 0 3.08-.59 4.22-1.57l.27.27v.79l5.01 4.99L22 19l-4.99-5z"
  />
</svg>
`;

exports[`renders ZoomOutMap 1`] = `
<svg
  className=""
  fill="currentcolor"
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    d="M15 3l2.3 2.3-2.89 2.87 1.42 1.42L18.7 6.7 21 9V3zM3 9l2.3-2.3 2.87 2.89 1.42-1.42L6.7 5.3 9 3H3zm6 12l-2.3-2.3 2.89-2.87-1.42-1.42L5.3 17.3 3 15v6zm12-6l-2.3 2.3-2.87-2.89-1.42 1.42 2.89 2.87L15 21h6z"
  />
</svg>
`;
